@@ -1,3 +1,8 @@
+2006-12-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/CiscoIOS_MacAccounting.pm (discover):
+	New discovery parameter: CiscoIOS_MacAccounting::tokenset-members
+
 2006-12-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
